--- a/views/RegisterPage.ejs
+++ b/views/RegisterPage.ejs
@@ -44,6 +44,15 @@
     </header>
 
     <div class="container" id="registerSection">
+        <% if (success_msg.length > 0) { %>
+            <div class="alert alert-success"><%= success_msg %></div>
+          <% } %>
+          <% if (error_msg.length > 0) { %>
+            <div class="alert alert-danger"><%= error_msg %></div>
+          <% } %>
+          <% if (error.length > 0) { %>
+            <div class="alert alert-danger"><%= error %></div>
+          <% } %>    
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
