--- a/views/CreateMemeForm.ejs
+++ b/views/CreateMemeForm.ejs
@@ -10,11 +10,9 @@
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <title>Create Meme</title>
 </head>
 
@@ -33,23 +31,23 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <% if (user) { %>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/memes/create/<%= user.id %>">Post a Meme</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/users/profile/<%= user.id %>">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/users/logout">Logout</a>
-                        </li>
-                        <% } else { %>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/users/register">Register</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/users/login">Login</a>
-                            </li>
-                            <% } %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/memes/create/<%= user.id %>">Post a Meme</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/profile/<%= user.id %>">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/logout">Logout</a>
+                    </li>
+                    <% } else { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/register">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/login">Login</a>
+                    </li>
+                    <% } %>
                 </ul>
             </div>
         </nav>
@@ -58,115 +56,101 @@
     <div class="container mt-5">
         <h1>Create Meme</h1>
 
-        <% if (error.length> 0) { %>
-            <div class="alert alert-danger">
-                <%= error %>
+        <% if (error.length > 0) { %>
+        <div class="alert alert-danger">
+            <%= error %>
+        </div>
+        <% } %>
+
+        <% if (success_msg.length > 0) { %>
+        <div class="alert alert-success">
+            <%= success_msg %>
+        </div>
+        <% } %>
+
+        <form action="/memes/create/<%= UserId %>" method="POST">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" class="form-control" id="title" name="title" required>
             </div>
-            <% } %>
 
-                <% if (success_msg.length> 0) { %>
-                    <div class="alert alert-success">
-                        <%= success_msg %>
+            <div class="form-group">
+                <label for="picture">Select Picture</label>
+                <div class="d-flex overflow-auto" style="white-space: nowrap; padding: 10px 0;">
+                    <!-- Add New Picture Card -->
+                    <div class="card" style="display: inline-block; width: 200px; margin-right: 10px;">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Add New Picture</h5>
+                            <div class="form-group">
+                                <label for="pictureName">Name</label>
+                                <input type="text" id="pictureName" name="pictureName" class="form-control"
+                                    placeholder="Enter picture name">
+                            </div>
+                            <div class="form-group">
+                                <label for="pictureUrl">URL</label>
+                                <input type="url" id="pictureUrl" name="pictureUrl" class="form-control"
+                                    placeholder="Enter picture URL">
+                            </div>
+                            <!-- Radio button for selecting new picture -->
+                            <div class="form-check">
+                                <input type="radio" class="form-check-input" id="newPicture" name="PictureId" value="new">
+                                <label class="form-check-label" for="newPicture">New Picture</label>
+                            </div>
+                        </div>
                     </div>
-                    <% } %>
 
-                        <form action="/memes/create/<%= UserId %>" method="POST">
-                            <div class="form-group">
-                                <label for="title">Title</label>
-                                <input type="text" class="form-control" id="title" name="title" required>
+                    <!-- Existing Pictures -->
+                    <% pictures.forEach((picture) => { %>
+                    <div class="card" style="display: inline-block; width: 200px; margin-right: 10px;">
+                        <label for="picture<%= picture.id %>" style="cursor: pointer; display: block;">
+                            <img src="<%= picture.dataValues.url %>" class="card-img-top" alt="<%= picture.name %>"
+                                style="width: 100%; height: 150px; object-fit: cover;">
+                            <div class="card-body text-center">
+                                <h5 class="card-title" style="font-size: 1rem; margin: 0;">
+                                    <input type="radio" id="picture<%= picture.id %>" name="PictureId"
+                                        value="<%= picture.id %>" required>
+                                    <%= picture.name %>
+                                </h5>
                             </div>
+                        </label>
+                    </div>
+                    <% }); %>
+                </div>
+            </div>
 
-                            <div class="form-group">
-                                <label for="picture">Select Picture</label>
-                                <div class="d-flex overflow-auto" style="white-space: nowrap; padding: 10px 0;">
-                                    <!-- Add New Picture Card -->
-                                    <div class="card" style="display: inline-block; width: 200px; margin-right: 10px;">
-                                        <div class="card-body text-center">
-                                            <h5 class="card-title">Add New Picture</h5>
-                                            <div class="form-group">
-                                                <label for="pictureName">Name</label>
-                                                <input type="text" id="pictureName" name="pictureName"
-                                                    class="form-control" placeholder="Enter picture name">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="pictureUrl">URL</label>
-                                                <input type="url" id="pictureUrl" name="pictureUrl" class="form-control"
-                                                    placeholder="Enter picture URL">
-                                            </div>
-                                            <!-- Radio button for selecting new picture -->
-                                            <div class="form-check">
-                                                <input type="radio" class="form-check-input" id="newPicture"
-                                                    name="PictureId" value="new">
-                                                <label class="form-check-label" for="newPicture">New Picture</label>
-                                            </div>
-                                        </div>
-                                    </div>
+            <div class="form-group">
+                <label for="topText">Top Text</label>
+                <input type="text" class="form-control" id="topText" name="topText">
+            </div>
 
-                                    <!-- Existing Pictures -->
-                                    <% pictures.forEach((picture)=> { %>
-                                        <div class="card"
-                                            style="display: inline-block; width: 200px; margin-right: 10px;">
-                                            <label for="picture<%= picture.id %>"
-                                                style="cursor: pointer; display: block;">
-                                                <img src="<%= picture.dataValues.url %>" class="card-img-top"
-                                                    alt="<%= picture.name %>"
-                                                    style="width: 100%; height: 150px; object-fit: cover;">
-                                                <div class="card-body text-center">
-                                                    <h5 class="card-title" style="font-size: 1rem; margin: 0;">
-                                                        <input type="radio" id="picture<%= picture.id %>"
-                                                            name="PictureId" value="<%= picture.id %>" required>
-                                                        <%= picture.name %>
-                                                    </h5>
-                                                </div>
-                                            </label>
-                                        </div>
-                                        <% }); %>
-                                </div>
-                            </div>
+            <div class="form-group">
+                <label for="bottomText">Bottom Text</label>
+                <input type="text" class="form-control" id="bottomText" name="bottomText">
+            </div>
 
+            <div class="form-group">
+                <label for="tags">Select Tags</label>
+                <div class="d-flex flex-wrap">
+                    <% tags.forEach(tag => { %>
+                    <div class="form-check mr-3">
+                        <input type="checkbox" class="form-check-input" id="tag<%= tag.id %>" value="<%= tag.id %>"
+                            name="tags[]">
+                        <label class="form-check-label" for="tag<%= tag.id %>">
+                            <%= tag.name %>
+                        </label>
+                    </div>
+                    <% }); %>
+                </div>
+                <input type="text" id="newTagName" name="newTagName" class="form-control mt-2"
+                    placeholder="Enter new tag name">
+            </div>
 
-                            <div class="form-group">
-                                <label for="topText">Top Text</label>
-                                <input type="text" class="form-control" id="topText" name="topText">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="bottomText">Bottom Text</label>
-                                <input type="text" class="form-control" id="bottomText" name="bottomText">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="tags">Select Tags</label>
-                                <div class="d-flex flex-wrap">
-                                    <% tags.forEach(tag=> { %>
-                                        <div class="form-check mr-3">
-                                            <input type="checkbox" class="form-check-input" id="tag<%= tag.id %>"
-                                                value="<%= tag.id %>" name="tags[]">
-                                            <label class="form-check-label" for="tag<%= tag.id %>">
-                                                <%= tag.name %>
-                                            </label>
-                                        </div>
-                                        <% }); %>
-                                </div>
-                                <input type="text" id="newTagName" name="newTagName" class="form-control mt-2"
-                                    placeholder="Enter new tag name">
-                            </div>
-
-                            <button type="submit" class="btn btn-primary">Create Meme</button>
-                        </form>
-                        <br><br>
+            <button type="submit" class="btn btn-primary">Create Meme</button>
+        </form>
+        <br><br>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <div class="container">
-            <p>&copy; 2024 Nama Situs. Semua hak dilindungi.</p>
-            <ul class="list-unstyled">
-                <li><a href="/privacy" class="text-white">Kebijakan Privasi</a></li>
-                <li><a href="/terms" class="text-white">Syarat dan Ketentuan</a></li>
-            </ul>
-        </div>
-    </footer>
+
 </body>
 
 </html>
