--- a/views/LoginPage.ejs
+++ b/views/LoginPage.ejs
@@ -49,6 +49,11 @@
               <%= success_msg %>
             </div>
           <% } %>
+        <% if (error.length > 0) { %>
+            <div class="alert alert-danger">
+              <%= error %>
+            </div>
+          <% } %>
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
@@ -73,16 +78,7 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <div class="container">
-            <p>&copy; 2024 Nama Situs. Semua hak dilindungi.</p>
-            <ul class="list-unstyled">
-                <li><a href="/privacy" class="text-white">Kebijakan Privasi</a></li>
-                <li><a href="/terms" class="text-white">Syarat dan Ketentuan</a></li>
-            </ul>
-        </div>
-    </footer>
+
 
 </body>
 
