--- a/views/Memes.ejs
+++ b/views/Memes.ejs
@@ -57,47 +57,74 @@
     </header>
 
     <div class="container mt-4">
+        <div class="d-flex flex-wrap mb-2">
+            <% tags.forEach(tag => { %>
+                <a href="/memes?tagId=<%= tag.id %>" class="btn btn-secondary btn-sm mr-2 mb-2">
+                    #<%= tag.name %>
+                </a>
+            <% }); %>
+        </div>
         <div class="row">
             <% memes.forEach(meme=> { %>
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
+                        <div class="container d-flex justify-content-between align-items-center">
+                            <p class="mb-1">Poster: <a href="/users/profile/<%= meme.User.dataValues.id %>">
+                                    <%= meme.User.dataValues.name %>
+                                </a></p>
+                            <% if (user && (user.id == meme.UserId || user.role == 'admin')) { %>
+                                <div class="dropdown">
+                                    <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton<%= meme.id %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        •••
+                                    </button>
+                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton<%= meme.id %>">
+                                        <a class="dropdown-item" href="/memes/<%= meme.id %>/edit">Edit</a>
+                                        <form action="/memes/<%= meme.id %>/delete" method="post" onsubmit="return confirm('Are you sure you want to delete this meme?');">                
+                                            <button type="submit" class="dropdown-item">Delete</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            <% } %>
+                        </div>
+                
                         <div class="card-body">
                             <h5 class="card-title">
                                 <%= meme.title %>
                             </h5>
-                            <p class="card-text">
-                                <%= meme.topText %>
+                            <p class="card-text text-center" style="margin-bottom: 0;">
+                                <%= meme.upperCaseTopText() %>
                             </p>
-                            <img src="<%= meme.Picture.dataValues.url %>" class="card-img-top"
-                                alt="<%= meme.Picture.name %>">
-                            <p class="card-text">
-                                <%= meme.bottomText %>
+                            <img src="<%= meme.Picture.dataValues.url %>" class="card-img-top" alt="<%= meme.Picture.name %>">
+                            <p class="card-text text-center">
+                                <%= meme.upperCaseBottomText() %>
                             </p>
                         </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <% meme.Tags.forEach(tag=> {%>
-                                <a href="/memes/tags/<%= tag.id %>" class="btn btn-secondary btn-sm">#<%= tag.name %>
-                                </a>
-                                <% }); %>
-                                    <a href="/memes/<%= meme.id %>/comments" class="btn btn-primary btn-sm">Comment</a>
+                
+                        <div class="card-footer">
+                            <div class="d-flex flex-wrap mb-2">
+                                <% const memeTags = memesWithTags.find(m => m.id === meme.id).Tags %>
+                    <% memeTags.forEach(tag => { %>
+                        <a href="/memes/tags/<%= tag.id %>" class="btn btn-secondary btn-sm mr-2 mb-2">
+                            #<%= tag.name %>
+                        </a>
+                    <% }); %>
+                            </div>
+                
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="/memes/<%= meme.id %>/comments" class="btn btn-primary btn-sm">Comment</a>
+                            </div>
+                        </div>
+                
+                        <div class="card-footer text-muted text-right">
+                            <small>Time Created: <%= Meme.formatDate(meme.createdAt) %></small>
                         </div>
                     </div>
                 </div>
+                
                 <% }) %>
         </div>
     </div>
 
-
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <div class="container">
-            <p>&copy; 2024 Nama Situs. Semua hak dilindungi.</p>
-            <ul class="list-unstyled">
-                <li><a href="/privacy" class="text-white">Kebijakan Privasi</a></li>
-                <li><a href="/terms" class="text-white">Syarat dan Ketentuan</a></li>
-            </ul>
-        </div>
-    </footer>
 </body>
 
 </html>
