--- a/views/CreateMemeForm.ejs
+++ b/views/CreateMemeForm.ejs
@@ -20,7 +20,7 @@
     <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">Logo</a>
+            <a class="navbar-brand" href="/">8Banter</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,7 @@
                 <label for="picture">Select Picture</label>
                 <div class="d-flex overflow-auto" style="white-space: nowrap; padding: 10px 0;">
                     <!-- Add New Picture Card -->
-                    <div class="card" style="display: inline-block; width: 200px; margin-right: 10px;">
+                    <div class="card text-wrap" style="display: inline-block; width: 200px; margin-right: 10px;">
                         <div class="card-body text-center">
                             <h5 class="card-title">Add New Picture</h5>
                             <div class="form-group">
@@ -101,17 +101,16 @@
 
                     <!-- Existing Pictures -->
                     <% pictures.forEach((picture) => { %>
-                    <div class="card" style="display: inline-block; width: 200px; margin-right: 10px;">
+                    <div class="card text-wrap" style="display: inline-block; width: 200px; margin-right: 10px;">
                         <label for="picture<%= picture.id %>" style="cursor: pointer; display: block;">
                             <img src="<%= picture.dataValues.url %>" class="card-img-top" alt="<%= picture.name %>"
                                 style="width: 100%; height: 150px; object-fit: cover;">
-                            <div class="card-body text-center">
-                                <h5 class="card-title" style="font-size: 1rem; margin: 0;">
-                                    <input type="radio" id="picture<%= picture.id %>" name="PictureId"
-                                        value="<%= picture.id %>" required>
-                                    <%= picture.name %>
-                                </h5>
-                            </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title d-flex align-items-center justify-content-center">
+                                        <input type="radio" id="picture<%= picture.id %>" name="PictureId" value="<%= picture.id %>" required class="me-2 flex-shrink-0">
+                                        <span class="text-break"><%= picture.name %></span>
+                                    </h5>
+                                </div>
                         </label>
                     </div>
                     <% }); %>
