--- a/views/LoginPage.ejs
+++ b/views/LoginPage.ejs
@@ -22,7 +22,7 @@
     <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">Logo</a>
+            <a class="navbar-brand" href="/">8Banter</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
