--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -26,7 +26,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">Logo</a>
+      <a class="navbar-brand" href="/">8Banter</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
